<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">


    <ImageView
        android:layout_width="193dp"
        android:layout_height="128dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/captchaBox"
        android:text="I'm not a robot"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:text="@string/not_registered_yet"
            android:textColor="@color/design_default_color_background" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/registered"
            android:textColor="@color/purple_200"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>